seaqt/QtMultimedia/gen_qmediaplayer.nim

proc fcQMediaPlayer_override_virtual_isAvailable(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_isAvailable".}
proc fQMediaPlayer_virtualbase_service(self: pointer, ): pointer{.importc: "QMediaPlayer_virtualbase_service".}
proc fcQMediaPlayer_override_virtual_service(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_service".}
proc fQMediaPlayer_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMediaPlayer_virtualbase_event".}
proc fcQMediaPlayer_override_virtual_event(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_event".}
proc fQMediaPlayer_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMediaPlayer_virtualbase_eventFilter".}
proc fcQMediaPlayer_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_eventFilter".}
proc fQMediaPlayer_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_timerEvent".}
proc fcQMediaPlayer_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_timerEvent".}
proc fQMediaPlayer_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_childEvent".}
proc fcQMediaPlayer_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_childEvent".}
proc fQMediaPlayer_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMediaPlayer_virtualbase_customEvent".}
proc fcQMediaPlayer_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_customEvent".}
proc fQMediaPlayer_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlayer_virtualbase_connectNotify".}
proc fcQMediaPlayer_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_connectNotify".}
proc fQMediaPlayer_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMediaPlayer_virtualbase_disconnectNotify".}
proc fcQMediaPlayer_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMediaPlayer_override_virtual_disconnectNotify".}
proc fcQMediaPlayer_staticMetaObject(): pointer {.importc: "QMediaPlayer_staticMetaObject".}
proc fcQMediaPlayer_delete(self: pointer) {.importc: "QMediaPlayer_delete".}


func init*(T: type gen_qmediaplayer_types.QMediaPlayer, h: ptr cQMediaPlayer): gen_qmediaplayer_types.QMediaPlayer =
  T(h: h)
proc create*(T: type gen_qmediaplayer_types.QMediaPlayer, ): gen_qmediaplayer_types.QMediaPlayer =
  gen_qmediaplayer_types.QMediaPlayer.init(fcQMediaPlayer_new())

proc create*(T: type gen_qmediaplayer_types.QMediaPlayer, parent: gen_qobject_types.QObject): gen_qmediaplayer_types.QMediaPlayer =
  gen_qmediaplayer_types.QMediaPlayer.init(fcQMediaPlayer_new2(parent.h))

proc create*(T: type gen_qmediaplayer_types.QMediaPlayer, parent: gen_qobject_types.QObject, flags: cint): gen_qmediaplayer_types.QMediaPlayer =
  gen_qmediaplayer_types.QMediaPlayer.init(fcQMediaPlayer_new3(parent.h, cint(flags)))

proc metaObject*(self: gen_qmediaplayer_types.QMediaPlayer, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMediaPlayer_metaObject(self.h))

proc metacast*(self: gen_qmediaplayer_types.QMediaPlayer, param1: cstring): pointer =
  fcQMediaPlayer_metacast(self.h, param1)

proc metacall*(self: gen_qmediaplayer_types.QMediaPlayer, param1: cint, param2: cint, param3: pointer): cint =
  fcQMediaPlayer_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qmediaplayer_types.QMediaPlayer, s: cstring): string =
  let v_ms = fcQMediaPlayer_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qmediaplayer_types.QMediaPlayer, s: cstring): string =
  let v_ms = fcQMediaPlayer_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc hasSupport*(_: type gen_qmediaplayer_types.QMediaPlayer, mimeType: string): cint =
  cint(fcQMediaPlayer_hasSupport(struct_miqt_string(data: mimeType, len: csize_t(len(mimeType)))))

proc supportedMimeTypes*(_: type gen_qmediaplayer_types.QMediaPlayer, ): seq[string] =
  var v_ma = fcQMediaPlayer_supportedMimeTypes()
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc setVideoOutput*(self: gen_qmediaplayer_types.QMediaPlayer, surface: gen_qabstractvideosurface_types.QAbstractVideoSurface): void =
  fcQMediaPlayer_setVideoOutput(self.h, surface.h)

proc setVideoOutput*(self: gen_qmediaplayer_types.QMediaPlayer, surfaces: seq[gen_qabstractvideosurface_types.QAbstractVideoSurface]): void =
  var surfaces_CArray = newSeq[pointer](len(surfaces))
  for i in 0..<len(surfaces):
    surfaces_CArray[i] = surfaces[i].h

  fcQMediaPlayer_setVideoOutputWithSurfaces(self.h, struct_miqt_array(len: csize_t(len(surfaces)), data: if len(surfaces) == 0: nil else: addr(surfaces_CArray[0])))

proc media*(self: gen_qmediaplayer_types.QMediaPlayer, ): gen_qmediacontent_types.QMediaContent =
  gen_qmediacontent_types.QMediaContent(h: fcQMediaPlayer_media(self.h))

proc mediaStream*(self: gen_qmediaplayer_types.QMediaPlayer, ): gen_qiodevice_types.QIODevice =
  gen_qiodevice_types.QIODevice(h: fcQMediaPlayer_mediaStream(self.h))

proc playlist*(self: gen_qmediaplayer_types.QMediaPlayer, ): gen_qmediaplaylist_types.QMediaPlaylist =
  gen_qmediaplaylist_types.QMediaPlaylist(h: fcQMediaPlayer_playlist(self.h))

proc currentMedia*(self: gen_qmediaplayer_types.QMediaPlayer, ): gen_qmediacontent_types.QMediaContent =
  gen_qmediacontent_types.QMediaContent(h: fcQMediaPlayer_currentMedia(self.h))

proc state*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  cint(fcQMediaPlayer_state(self.h))

proc mediaStatus*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  cint(fcQMediaPlayer_mediaStatus(self.h))

proc duration*(self: gen_qmediaplayer_types.QMediaPlayer, ): clonglong =
  fcQMediaPlayer_duration(self.h)

proc position*(self: gen_qmediaplayer_types.QMediaPlayer, ): clonglong =
  fcQMediaPlayer_position(self.h)

proc volume*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  fcQMediaPlayer_volume(self.h)

proc isMuted*(self: gen_qmediaplayer_types.QMediaPlayer, ): bool =
  fcQMediaPlayer_isMuted(self.h)

proc isAudioAvailable*(self: gen_qmediaplayer_types.QMediaPlayer, ): bool =
  fcQMediaPlayer_isAudioAvailable(self.h)

proc isVideoAvailable*(self: gen_qmediaplayer_types.QMediaPlayer, ): bool =
  fcQMediaPlayer_isVideoAvailable(self.h)

proc bufferStatus*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  fcQMediaPlayer_bufferStatus(self.h)

proc isSeekable*(self: gen_qmediaplayer_types.QMediaPlayer, ): bool =
  fcQMediaPlayer_isSeekable(self.h)

proc playbackRate*(self: gen_qmediaplayer_types.QMediaPlayer, ): float64 =
  fcQMediaPlayer_playbackRate(self.h)

proc error*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  cint(fcQMediaPlayer_error(self.h))

proc errorString*(self: gen_qmediaplayer_types.QMediaPlayer, ): string =
  let v_ms = fcQMediaPlayer_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc currentNetworkConfiguration*(self: gen_qmediaplayer_types.QMediaPlayer, ): gen_qnetworkconfiguration_types.QNetworkConfiguration =
  gen_qnetworkconfiguration_types.QNetworkConfiguration(h: fcQMediaPlayer_currentNetworkConfiguration(self.h))

proc availability*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  cint(fcQMediaPlayer_availability(self.h))

proc audioRole*(self: gen_qmediaplayer_types.QMediaPlayer, ): cint =
  cint(fcQMediaPlayer_audioRole(self.h))

proc setAudioRole*(self: gen_qmediaplayer_types.QMediaPlayer, audioRole: cint): void =
  fcQMediaPlayer_setAudioRole(self.h, cint(audioRole))

proc supportedAudioRoles*(self: gen_qmediaplayer_types.QMediaPlayer, ): seq[cint] =
  var v_ma = fcQMediaPlayer_supportedAudioRoles(self.h)
  var vx_ret = newSeq[cint](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[cint]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = cint(v_outCast[i])
  vx_ret

proc customAudioRole*(self: gen_qmediaplayer_types.QMediaPlayer, ): string =
  let v_ms = fcQMediaPlayer_customAudioRole(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCustomAudioRole*(self: gen_qmediaplayer_types.QMediaPlayer, audioRole: string): void =
  fcQMediaPlayer_setCustomAudioRole(self.h, struct_miqt_string(data: audioRole, len: csize_t(len(audioRole))))

proc supportedCustomAudioRoles*(self: gen_qmediaplayer_types.QMediaPlayer, ): seq[string] =
  var v_ma = fcQMediaPlayer_supportedCustomAudioRoles(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc play*(self: gen_qmediaplayer_types.QMediaPlayer, ): void =
  fcQMediaPlayer_play(self.h)

proc pause*(self: gen_qmediaplayer_types.QMediaPlayer, ): void =
  fcQMediaPlayer_pause(self.h)

proc stop*(self: gen_qmediaplayer_types.QMediaPlayer, ): void =
  fcQMediaPlayer_stop(self.h)

proc setPosition*(self: gen_qmediaplayer_types.QMediaPlayer, position: clonglong): void =
  fcQMediaPlayer_setPosition(self.h, position)

proc setVolume*(self: gen_qmediaplayer_types.QMediaPlayer, volume: cint): void =
  fcQMediaPlayer_setVolume(self.h, volume)

proc setMuted*(self: gen_qmediaplayer_types.QMediaPlayer, muted: bool): void =
  fcQMediaPlayer_setMuted(self.h, muted)

proc setPlaybackRate*(self: gen_qmediaplayer_types.QMediaPlayer, rate: float64): void =
  fcQMediaPlayer_setPlaybackRate(self.h, rate)

proc setMedia*(self: gen_qmediaplayer_types.QMediaPlayer, media: gen_qmediacontent_types.QMediaContent): void =
  fcQMediaPlayer_setMedia(self.h, media.h)

proc setPlaylist*(self: gen_qmediaplayer_types.QMediaPlayer, playlist: gen_qmediaplaylist_types.QMediaPlaylist): void =
  fcQMediaPlayer_setPlaylist(self.h, playlist.h)

proc setNetworkConfigurations*(self: gen_qmediaplayer_types.QMediaPlayer, configurations: seq[gen_qnetworkconfiguration_types.QNetworkConfiguration]): void =
  var configurations_CArray = newSeq[pointer](len(configurations))
  for i in 0..<len(configurations):
    configurations_CArray[i] = configurations[i].h

  fcQMediaPlayer_setNetworkConfigurations(self.h, struct_miqt_array(len: csize_t(len(configurations)), data: if len(configurations) == 0: nil else: addr(configurations_CArray[0])))

proc mediaChanged*(self: gen_qmediaplayer_types.QMediaPlayer, media: gen_qmediacontent_types.QMediaContent): void =
  fcQMediaPlayer_mediaChanged(self.h, media.h)

type QMediaPlayermediaChangedSlot* = proc(media: gen_qmediacontent_types.QMediaContent)
proc miqt_exec_callback_QMediaPlayer_mediaChanged(slot: int, media: pointer) {.exportc.} =
  let nimfunc = cast[ptr QMediaPlayermediaChangedSlot](cast[pointer](slot))
  let slotval1 = gen_qmediacontent_types.QMediaContent(h: media)

  nimfunc[](slotval1)

proc onmediaChanged*(self: gen_qmediaplayer_types.QMediaPlayer, slot: QMediaPlayermediaChangedSlot) =
  var tmp = new QMediaPlayermediaChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQMediaPlayer_connect_mediaChanged(self.h, cast[int](addr tmp[]))
